--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "spidermonkey",
     "version": "0.0.1",
-    "type": "module",
     "description": "This is an example of a Crawlee project.",
     "dependencies": {
         "crawlee": "^3.0.0",
-        "puppeteer": "*"
+        "puppeteer": "*",
+        "ts-node": "^10.9.1"
     },
     "scripts": {
         "start": "node src/main.js",
